kubernetes/mango/apps/misc/ingext/chart/argo.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
  namespace: argo
spec:
  hostnames:
    - argocd.plexmox.com
  rules:
    - backendRefs:
        - kind: Service
          name: argo-argocd-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateways
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-webhook
  namespace: argo
spec:
  hostnames:
    - argocd.plexmox.com
  rules:
    - backendRefs:
        - kind: Service
          name: argo-argocd-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /api/webhook
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: gateways
