kubernetes/mango/apps/misc/ingext/chart/proxmox.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxmox
  namespace: default
spec:
  hostnames:
    - proxmox.plexmox.com
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: proxmox
      sessionPersistence:
        type: Cookie
        cookieConfig:
          lifetimeType: Session
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateways
